--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <!-- Text => style1  -->
     <div class="custom-container1">
       <p>
-        <span class="span">
-          CUKUP 5-7 TETES <br />
-          SECARA RUTIN
-        </span>
+        <span class="span"
+          >CUKUP 5-7 TETES <br />
+          SECARA RUTIN</span
+        >
       </p>
     </div>
 
@@ -55,35 +55,35 @@
     <!-- Text di btn => style2 -->
     <div class="container">
       <button class="button">
-        <img src="./src/images/image.png" alt="" class="checkmark" />
+        <img src="/public/static/images/image.png" alt="" class="checkmark" />
         KEBAS KESEMUTAN
       </button>
       <button class="button">
-        <img src="./src/images/image.png" alt="" class="checkmark" />
+        <img src="/public/static/images/image.png" alt="" class="checkmark" />
         RIGLISERIDA
       </button>
       <button class="button">
-        <img src="./src/images/image.png" alt="" class="checkmark" />
+        <img src="/public/static/images/image.png" alt="" class="checkmark" />
         ASAM URAT
       </button>
       <button class="button">
-        <img src="./src/images/image.png" alt="" class="checkmark" />
+        <img src="/public/static/images/image.png" alt="" class="checkmark" />
         HIPERTENSI
       </button>
       <button class="button">
-        <img src="./src/images/image.png" alt="" class="checkmark" />
+        <img src="/public/static/images/image.png" alt="" class="checkmark" />
         DIABET
       </button>
       <button class="button">
-        <img src="./src/images/image.png" alt="" class="checkmark" />
+        <img src="/public/static/images/image.png" alt="" class="checkmark" />
         STROKE
       </button>
       <button class="button">
-        <img src="./src/images/image.png" alt="" class="checkmark" />
+        <img src="/public/static/images/image.png" alt="" class="checkmark" />
         KOLESTEROL
       </button>
       <button class="button">
-        <img src="./src/images/image.png" alt="" class="checkmark" />
+        <img src="/public/static/images/image.png" alt="" class="checkmark" />
         JANTUNG
       </button>
     </div>
@@ -105,7 +105,7 @@
     <!-- Image1 serta ada btn text ditengahnya => style3 -->
     <div class="image-container">
       <img
-        src="/src/images/image1.png"
+        src="/public/static/images/image1.png"
         alt="Gambar Full Width"
         class="full-width-image"
       />
@@ -128,16 +128,16 @@
     <!-- Img gambar punggung beberapa img lain menjadi 1 line => syle3  -->
     <div class="image-container1">
       <div class="image-item">
-        <img src="/src/images/image2.png" alt="Gambar 1" />
+        <img src="/public/static/images/image2.png" alt="Gambar 1" />
       </div>
       <div class="image-item">
-        <img src="/src/images/image3.png" alt="Gambar 2" />
+        <img src="/public/static/images/image3.png" alt="Gambar 2" />
       </div>
       <div class="image-item">
-        <img src="/src/images/image3.png" alt="Gambar 3" />
+        <img src="/public/static/images/image3.png" alt="Gambar 3" />
       </div>
       <div class="image-item">
-        <img src="/src/images/image4.png" alt="Gambar 4" />
+        <img src="/public/static/images/image4.png" alt="Gambar 4" />
       </div>
     </div>
 
@@ -165,28 +165,29 @@
     <div class="container-list">
       <div class="list">
         <div class="item">
-          <img src="/src/images/image7.png" alt="" /> JARI MUDAH KAKU
+          <img src="/public/static/images/image7.png" alt="" /> JARI MUDAH KAKU
         </div>
         <div class="item">
-          <img src="/src/images/image7.png" alt="" /> MUDAH LELAH
+          <img src="/public/static/images/image7.png" alt="" /> MUDAH LELAH
         </div>
         <div class="item">
-          <img src="/src/images/image7.png" alt="" /> PEGAL-PEGAL
+          <img src="/public/static/images/image7.png" alt="" /> PEGAL-PEGAL
         </div>
         <div class="item">
-          <img src="/src/images/image7.png" alt="" /> SERING PUSING
+          <img src="/public/static/images/image7.png" alt="" /> SERING PUSING
         </div>
         <div class="item">
-          <img src="/src/images/image7.png" alt="" /> NYERI DADA
+          <img src="/public/static/images/image7.png" alt="" /> NYERI DADA
         </div>
         <div class="item">
-          <img src="/src/images/image7.png" alt="" /> KEBAS & KESEMUTAN
+          <img src="/public/static/images/image7.png" alt="" /> KEBAS &
+          KESEMUTAN
         </div>
       </div>
 
       <!-- Gambar kaki berada di sebelah kanan -->
       <div class="image-section">
-        <img src="/src/images/image6.png" alt="Gambar Kaki" />
+        <img src="/public/static/images/image6.png" alt="Gambar Kaki" />
       </div>
     </div>
 
@@ -217,9 +218,9 @@
     </div>
 
     <!-- Img obat Tisaga => style4 -->
-    <di class="image-container3">
-      <img src="/src/images/image8.png" alt="" class="image-item2" />
-    </di>
+    <div class="image-container3">
+      <img src="/public/static/images/image8.png" alt="" class="image-item2" />
+    </div>
 
     <!-- -------------------- -->
     <!--TISAGA 313 => style4  -->
@@ -244,7 +245,7 @@
         <p class="text6">TISAGA 313</p>
       </div>
       <div class="image-container4">
-        <img src="/src/images/iamge9.png" alt="Tanda Tanya" />
+        <img src="/public/static/images/image9.png" alt="Tanda Tanya" />
       </div>
     </div>
 
@@ -252,24 +253,24 @@
     <!-- List mulai dari HASILNYA CEPAT => style4 -->
     <div class="text-container8">
       <div class="list1">
-        <img class="img-item2" src="/src/images/image9.png" alt="" /> HASILNYA
-        CEPAT
+        <img class="img-item2" src="/public/static/images/image9.png" alt="" />
+        HASILNYA CEPAT
       </div>
       <div class="list1">
-        <img class="img-item2" src="/src/images/image9.png" alt="" /> TERBUAT
-        DARI 17 BAHAN HERBAL
+        <img class="img-item2" src="/public/static/images/image9.png" alt="" />
+        TERBUAT DARI 17 BAHAN HERBAL
       </div>
       <div class="list1">
-        <img class="img-item2" src="/src/images/image9.png" alt="" /> TANPA EFEK
-        SAMPING
+        <img class="img-item2" src="/public/static/images/image9.png" alt="" />
+        TANPA EFEK SAMPING
       </div>
       <div class="list1">
-        <img class="img-item2" src="/src/images/image9.png" alt="" /> TERDAFTAR
-        BPOM
+        <img class="img-item2" src="/public/static/images/image9.png" alt="" />
+        TERDAFTAR BPOM
       </div>
       <div class="list1">
-        <img class="img-item2" src="/src/images/image9.png" alt="" /> SUDAH
-        TERBUKTI RIBUAN ORANG
+        <img class="img-item2" src="/public/static/images/image9.png" alt="" />
+        SUDAH TERBUKTI RIBUAN ORANG
       </div>
     </div>
 
@@ -291,10 +292,10 @@
     <!-- Img Phone, garis bawah bitu & testimony => style5 -->
     <div class="text-container11">
       <div class="phone-image">
-        <img src="/src/images/image10.png" alt="Gambar Telepon" />
+        <img src="/public/static/images/image10.png" alt="Gambar Telepon" />
       </div>
       <div class="testimony-image">
-        <img src="/src/images/image12.png" alt="Gambar Testimoni" />
+        <img src="/public/static/images/image12.png" alt="Gambar Testimoni" />
       </div>
     </div>
 
@@ -308,8 +309,8 @@
     <!-- Img Testimony => style5 -->
     <div class="text-container13">
       <div class="chat-message">
-        <img src="/src/images/image13.png" alt="" class="img-item3" />
-        <img src="/src/images/image14.png" alt="" class="img-item4" />
+        <img src="/public/static/images/image13.png" alt="" class="img-item3" />
+        <img src="/public/static/images/image14.png" alt="" class="img-item4" />
       </div>
     </div>
 
@@ -387,7 +388,7 @@
       </div>
 
       <div class="source">
-        <p>Sumber: <img src="/src/images/image15.png" alt="" /></p>
+        <p>Sumber: <img src="/public/static/images/image15.png" alt="" /></p>
       </div>
     </div>
 
@@ -422,13 +423,13 @@
         </div>
       </div>
       <div class="image-container5">
-        <img src="/src/images/image16.png" alt="Gambar Obat TISAGA" />
+        <img src="/public/static/images/image16.png" alt="Gambar Obat TISAGA" />
       </div>
     </div>
     <p class="from-price">Dari Harga</p>
 
     <!-- ---------------------------------------------------- -->
-    <!--SEMBUH DENGAN IJIN ALLAH => style5  -->
+    <!--SEMBUH DENGAN IJIN ALLAH=> style5  -->
     <div class="text-container21">
       <p>SEMBUH DENGAN IJIN ALLAH</p>
     </div>
@@ -447,15 +448,15 @@
     <!-- YUK TERHUBUNG LANGSUNG DENGAN KAMI VIA WHATSAPP => style5 -->
     <div class="text-container23">
       <div class="text-container23-item">
-        <img class="chekmark" src="/src/images/image17.png" alt="" />
+        <img class="chekmark" src="/public/static/images/image17.png" alt="" />
         <span class="text-container23-text">Gratis Konsultasi 24 Jam</span>
       </div>
       <div class="text-container23-item">
-        <img class="chekmark" src="/src/images/image17.png" alt="" />
+        <img class="chekmark" src="/public/static/images/image17.png" alt="" />
         <span class="text-container23-text">Diskon 67%</span>
       </div>
       <div class="text-container23-item">
-        <img class="chekmark" src="/src/images/image17.png" alt="" />
+        <img class="chekmark" src="/public/static/images/image17.png" alt="" />
         <span class="text-container23-text">Beli 2 lebih Hemat</span>
       </div>
     </div>
@@ -469,9 +470,9 @@
       <p>DENGAN</p>
       <p>KAMI VIA</p>
       <p><span class="text-blue">WHATSAPP</span></p>
-    </div>
-    <div class="image-container6">
-      <img src="/src/images/image18.png" alt="" />
+      <div class="image-container6">
+        <img src="/public/static/images/image18.png" alt="" />
+      </div>
     </div>
 
     <!-- ------------------------------------------- -->
@@ -483,7 +484,7 @@
     <!-- ---------------------------------------------- -->
     <!-- IMG Warning => style6 -->
     <div class="image-container7">
-      <img class="image-item3" src="/src/images/image19.png" alt="" />
+      <img class="image-item3" src="/public/static/images/image19.png" alt="" />
     </div>
 
     <!-- ----------------------------- -->
@@ -608,17 +609,17 @@
     <div class="arrow-container">
       <!-- Arrow 1 -->
       <div class="arrow">
-        <img src="/src/images/arrow1.png" alt="Arrow 1" />
+        <img src="/public/static/images/arrow1.png" alt="Arrow 1" />
       </div>
 
       <!-- Arrow 2 -->
       <div class="arrow">
-        <img src="/src/images/arrow2.png" alt="Arrow 2" />
+        <img src="/public/static/images/arrow2.png" alt="Arrow 2" />
       </div>
 
       <!-- Arrow 3 -->
       <div class="arrow">
-        <img src="/src/images/arrow3.png" alt="Arrow 3" />
+        <img src="/public/static/images/arrow3.png" alt="Arrow 3" />
       </div>
     </div>
 
@@ -631,7 +632,7 @@
     <!-- -------------------------------------------------------------------- -->
     <div class="profile-card">
       <div class="profile-image">
-        <img src="/src/images/image20.png" alt="Sinta" />
+        <img src="/public/static/images/image20.png" alt="Sinta" />
       </div>
       <div class="profile-name">
         <p>Sinta</p>
@@ -640,6 +641,21 @@
 
     <!-- Bootstrap & Main Script -->
     <script type="module" src="./src/main.js"></script>
-    <script src="/src/timer.js"></script>
+    <script type="module" src="/src/timer.js"></script>
   </body>
+  <script type="text/javascript">
+    window.mychat = window.mychat || {};
+    window.mychat.server = "https://live.cekat.ai/widget.js";
+    window.mychat.iframeWidth = "400px";
+    window.mychat.iframeHeight = "700px";
+    window.mychat.accessKey = "BOTIQ-mIw4f8E6";
+    (function () {
+      var mychat = document.createElement("script");
+      mychat.type = "text/javascript";
+      mychat.async = true;
+      mychat.src = window.mychat.server;
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(mychat, s);
+    })();
+  </script>
 </html>
