Update fitur landing page

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
     <!-- -------------------------------------------------------------------- -->
 
-    <!-- YUK TERHUBUNG LANGSUNG DENGAN KAMI VIA WHATSAPP => style5 -->
+    <!-- List and checkmark => style5 -->
     <div class="text-container23">
       <div class="text-container23-item">
         <img class="chekmark" src="/public/static/images/image17.png" alt="" />
@@ -463,7 +463,7 @@
 
     <!-- ----------------------------------------------------- -->
     <!-- YUK TERHUBUNG LANGSUNG DENGAN KAMI VIA WHATSAPP dan img => style5  -->
-    <div class="text-container24">
+    <!-- <div class="text-container24">
       <p>YUK</p>
       <p>TERHUBUNG</p>
       <p><span class="text-blue">LANGSUNG</span></p>
@@ -473,7 +473,7 @@
       <div class="image-container6">
         <img src="/public/static/images/image18.png" alt="" />
       </div>
-    </div>
+    </div> -->
 
     <!-- ------------------------------------------- -->
     <!-- KLIK UNTUK LANJUT KE WHATSAPP => style5 -->
