Update fitur landing page

--- a/index.html
+++ b/index.html
@@ -477,9 +477,9 @@
 
     <!-- ------------------------------------------- -->
     <!-- KLIK UNTUK LANJUT KE WHATSAPP => style5 -->
-    <div class="text-container25">
+    <!-- <div class="text-container25">
       <p>KLIK UNTUK LANJUT KE WHATSAPP</p>
-    </div>
+    </div> -->
 
     <!-- ---------------------------------------------- -->
     <!-- IMG Warning => style6 -->
