Update fitur landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
 
-    <title>Bootstrap with Vite</title>
+    <title>Tisaga 313</title>
   </head>
   <body>
     <!-- Bg hijau dan text => style -->
